--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -5,7 +5,7 @@
     </a>
     <span class="footer--spacer"></span>
     <span *ngFor="let s of social">
-      <a class="footer--link" [title]="s.title" [href]="s.url">
+      <a class="icon--link" [title]="s.title" [href]="s.url">
         <i [class]="s.icon + ' ' + s.class"></i>
       </a>
     </span>
