--- a/src/styles.scss
+++ b/src/styles.scss
@@ -33,12 +33,36 @@ a {
   text-decoration: none;
 }
 
+.icon--link {
+  margin: 8px;
+  color: $dark-gray;
+}
+
 // ****************************************************************************
 // Scrollbar
 // ****************************************************************************
 /* width */
 ::-webkit-scrollbar {
   width: 0 !important;
+}
+
+// ****************************************************************************
+// Global Color
+// ****************************************************************************
+.element--red {
+  color: map-get($primary, 1);
+}
+
+.element--green {
+  color: map-get($primary, 2);
+}
+
+.element--blue {
+  color: map-get($primary, 3);
+}
+
+.element--yellow {
+  color: map-get($primary, 4);
 }
 
 // ****************************************************************************
