small commit for the day

--- a/src/app/components/resume/resume.component.html
+++ b/src/app/components/resume/resume.component.html
@@ -1,7 +1,7 @@
 <app-navigation></app-navigation>
 <div class="container container--routing-resume">
   <div>
-    TODO: insert button for download
+    <button mat-button>Download</button>
   </div>
   <div>
     TODO: insert html resume
