created an embed resume component to create an interactable resume

--- a/src/app/components/resume/resume.component.html
+++ b/src/app/components/resume/resume.component.html
@@ -1,10 +1,10 @@
 <app-navigation></app-navigation>
 <div class="container container--routing-resume">
-  <div>
+  <!-- <div>
     <button mat-button>Download</button>
-  </div>
-  <div>
-    TODO: insert html resume
+  </div> -->
+  <div class="container--resume">
+    <app-embededResume></app-embededResume>
   </div>
 </div>
 <app-footer></app-footer>
