--- a/src/app/components/resume/resume.component.scss
+++ b/src/app/components/resume/resume.component.scss
@@ -6,7 +6,14 @@
 @import '../../../style-helpers/fonts';
 @import '../../../style-helpers/viewportHelper';
 
+.container--resume {
+  display: flex;
+  align-items: stretch;
+  width: 100%;
+  height: 100%;
+}
+
 .iframe--resume {
   width: 100%;
-  height: 500px;
+  height: 100%;
 }
