--- a/src/app/components/resume/resume.component.html
+++ b/src/app/components/resume/resume.component.html
@@ -3,8 +3,6 @@
   <!-- <div>
     <button mat-button>Download</button>
   </div> -->
-  <div class="container--resume">
-    <app-embededResume></app-embededResume>
-  </div>
+  <app-embeded-resume></app-embeded-resume>
 </div>
 <app-footer></app-footer>
