more organization of components

--- a/src/app/components/resume/embeded-resume/embeded-resume.component.html
+++ b/src/app/components/resume/embeded-resume/embeded-resume.component.html
@@ -1,3 +1,6 @@
-<p>
-  embeded-resume works!
-</p>
+<div class="container--resume">
+  <app-resume-header></app-resume-header>
+  <app-resume-education></app-resume-education>
+  <app-resume-experience></app-resume-experience>
+  <app-resume-projects></app-resume-projects>
+</div>
